--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <div class="row p-3">
         <nav class="navbar navbar-dark bg-dark rounded justify-content-around shadow-sm border border-secondary">
             <button class="nav-item btn btn-outline-danger rounded-pill" onclick="shareToggle()">Upload</button>
-            <!-- <button class="nav-item btn btn-outline-success" onclick="filesToggle()">Files</button> -->
+            <button class="nav-item btn btn-outline-secondary" onclick="generateQR('{{context.ip}}')">QRcode</button>
             <button class="nav-item btn btn-outline-success rounded-pill" onclick="searchToggle()">Search</button>
         </nav>
     </div>
@@ -51,6 +51,15 @@
 </div>
 
 
+<!-- QRcode -->
+<div class="container text-center">
+    <div class="row p-3 bg-dark justify-content-around">
+        <div class="btn btn-outline-secondary text-center" style="width: auto;" id="qrcode"></div>
+        <div class="badge text-muted" id="qrcode-text"></div>
+    </div>
+</div>
+
+
 
 <!-- Files -->
 <div class="container" id="files-bar">
@@ -59,7 +68,8 @@
             <div class="card bg-dark border-secondary m-3 col-lg-4"> 
                 <div class="card-header">{{file}}</div>
                 <div class="card-footer">
-                    <a href="/download/{{file}}" download><button class="btn btn-outline-success w-100 rounded-pill">↓</button></a>
+                    <a href="/download/{{file}}" download><button class="btn btn-outline-success w-100 rounded-pill mb-1">↓</button></a>
+                    <a onclick="generateQR('{{context.ip}}/download/{{file}}')" download><button class="btn btn-outline-secondary w-100 rounded-pill">🏁</button></a>
                 </div>
             </div>
         {% endfor %}
@@ -67,6 +77,7 @@
 </div>
 
 <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+<script src="{{ url_for('static', filename='qrcode.min.js') }}"></script>
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
