fix qrcode background color

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 <!-- QRcode -->
 <div class="container text-center">
     <div class="row p-3 bg-dark justify-content-around">
-        <div class="btn btn-outline-secondary text-center" style="width: auto;" id="qrcode"></div>
+        <div class="btn btn-secondary text-center" style="width: auto;" id="qrcode"></div>
         <div class="badge text-muted" id="qrcode-text"></div>
     </div>
 </div>
